Update readme with PDF fix for Amplify and update menu so the tabs appear correct on mobile

--- a/personal-website/src/components/menu/Menu.css
+++ b/personal-website/src/components/menu/Menu.css
@@ -28,7 +28,7 @@ ul {
 .link {
   text-decoration: none;
   color: #5AA3FB;
-  font-size: 35px;
+  font-size: 3vw;
   padding: 0.1rem 1rem;
   position: relative;
 }
